<resources>
    <string name="app_name">iCargo</string>
    <string name="nome_app">iCargo</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="label_nao_possui_conta">Não possui conta?</string>
    <string name="label_crie_uma">Crie uma!</string>
    <string name="entrar">Entrar</string>
    <string name="aviso_informe_email">Por favor, informe seu e-mail</string>
    <string name="aviso_informe_senha">Por favor, informe sua senha</string>
    <string name="aviso_senha_curta">A senha deve ter no mínimo 6 caracteres</string>
    <string name="sair">Sair</string>
    <string name="aviso_erro_login">Erro ao entrar. Por favor, verifique suas credenciais.</string>
    <string name="repita_a_senha">Repita a senha</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="ja_possui_conta">Já possui uma conta?</string>
    <string name="faca_login">Faça login!</string>
    <string name="erro_validar_dados">Erro ao validar os dados</string>
    <string name="aviso_informe_nome">Informe seu nome</string>
    <string name="aviso_repita_senha">Repita sua senha</string>
    <string name="aviso_senha_igual">A senha deve ser igual nos dois campos</string>
    <string name="erro_criar_conta">Erro ao criar conta. Tente novamente!</string>
    <string name="aviso_conta_criada">Conta criada com sucesso</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_feed">Feed</string>
    <string name="title_frete">Frete</string>
    <string name="title_fretes">Fretes</string>
    <string name="desc_fretes">Gerencie seus fretes de forma rápida e deixe que o aplicativo os organize para você.</string>
    <string name="title_clientes">Clientes</string>
    <string name="desc_clientes">Mantenha todos os seus clientes em um só lugar, e atualize seus dados de forma prática.</string>
    <string name="title_financeiro">Financeiro</string>
    <string name="desc_financeiro">Os registros financeiros não deixam você perder o controle sobre seus lucros.</string>
    <string name="nome">Nome</string>
    <string name="endereco">Endereço</string>
    <string name="telefone">Telefone</string>
    <string name="telefone_de_emergencia">Telefone de emergência</string>
    <string name="aviso_informe_nome_cliente">Informe o nome do cliente</string>
    <string name="erro_salvar_dados_cliente">Erro ao salvar os dados do cliente</string>
    <string name="aviso_cliente_salvo">Cliente salvo</string>
    <string name="erro_padrao">Erro ao realizar a ação</string>
    <string name="erro_carregar_clientes">Erro ao carregar clientes</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="aviso_sem_clientes">Você não possui clientes cadastrados. Adicione selecionando o +.</string>
    <string name="realizada">Realizada</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>
    <string name="cancelar">Cancelar</string>
    <string name="pesquisar_por_nome">Pesquisar por nome</string>
    <string name="erro_pesquisar_clientes">Erro ao pesquisar clientes</string>
    <string name="erro_editar_cliente">Erro ao editar cliente</string>
    <string name="erro_excluir_cliente">Erro ao excluir cliente</string>
    <string name="carga">Carga</string>
    <string name="cliente">Cliente</string>
    <string name="dia">Dia</string>
    <string name="hora">Hora</string>
    <string name="erro_carregar_seus_dados">Erro ao carregar seus dados</string>
    <string name="erro_salvar_frete">Erro ao salvar frete. Tente novamente!</string>
    <string name="aviso_frete_salvo">Frete salvo</string>
    <string name="permissao_negada_chamadas">Permissão negada para realizar chamadas</string>
    <string name="permissao_realizar_chamadas">Permissão para realizar chamadas</string>
    <string name="label_ligar_para">Ligar para %1$s</string>
    <string name="aviso_cliente_excluido">Cliente excluído</string>
    <string name="erro_atualizar_clientes">Erro ao atualizar seus clientes</string>
    <string name="aviso_informe_o_cliente">Informe o cliente</string>
    <string name="erro_pesquisar">Erro ao pesquisar</string>
    <string name="label_RS">R$</string>
    <string name="centavos">,00</string>
    <string name="label_valor_cobrado">Valor cobrado</string>
    <string name="aviso_sem_fretes">Você não possui novos fretes. Adicione selecionando o +.</string>
    <string name="erro_carregar_fretes">Oops! Ocorreu um erro ao carregar seus fretes.</string>
    <string name="erro_atualizar_fretes">Erro ao atualizar a lista de fretes.</string>
    <string name="aviso_frete_removido">Frete removido</string>
    <string name="erro_atualizar_frete">Erro ao atualizar frete</string>
    <string name="erro_atualizar_financeiro">Erro ao atualizar financeiro!</string>
    <string name="erro_excluir_frete">Erro ao excluir frete</string>
    <string name="erro_carregar_financeiro">Ocorreu um erro ao carregar seus registros financeiros.</string>
    <string name="label_janeiro">Janeiro</string>
    <string name="label_fevereiro">Fevereiro</string>
    <string name="label_marco">Março</string>
    <string name="label_abril">Abril</string>
    <string name="label_maio">Maio</string>
    <string name="label_junho">Junho</string>
    <string name="label_julho">Julho</string>
    <string name="label_agosto">Agosto</string>
    <string name="label_setembro">Setembro</string>
    <string name="label_outubro">Outubro</string>
    <string name="label_novembro">Novembro</string>
    <string name="label_dezembro">Dezembro</string>
    <string name="voltar">Voltar</string>
    <string name="aviso_sem_registros_financeiros">Você não possui registros financeiros.</string>
    <string name="hoje">Hoje</string>
    <string name="aviso_frete_realizado">Frete realizado</string>
    <string name="erro_carregar_fretes_ativos">Erro ao carregar fretes ativos</string>
    <string name="label_frete_hoje">frete hoje</string>
    <string name="label_fretes_hoje">fretes hoje</string>
    <string name="label_cliente">Cliente</string>
    <string name="aviso_obrigatorio">Obrigatório</string>
    <string name="aviso_informe_carga">Informe a carga</string>
    <string name="aviso_informe_valor">Informe o valor</string>
    <string name="aviso_informe_data">Informe a data</string>
    <string name="aviso_informe_horario">Informe o horário</string>
    <string name="label_iniciar">Iniciar</string>
</resources>
