<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroActivity">

    <EditText
        android:id="@+id/etNome"
        style="@style/EditTextFormStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:drawableTop="@drawable/ic_user"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEmailLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/EditTextFormStyle"
        android:drawableTop="@drawable/ic_mail"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNome" />

    <EditText
        android:id="@+id/etSenhaLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/EditTextFormStyle"
        android:drawableTop="@drawable/ic_lock"
        android:hint="@string/senha"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailLogin" />

    <EditText
        android:id="@+id/etSenha2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/EditTextFormStyle"
        android:drawableTop="@drawable/ic_lock"
        android:hint="@string/repita_a_senha"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSenhaLogin" />

    <Button
        android:id="@+id/btnCriarConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:textAllCaps="false"
        android:fontFamily="@font/nunito"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/criar_conta"
        app:layout_constraintEnd_toEndOf="@+id/etSenha2"
        app:layout_constraintTop_toBottomOf="@+id/etSenha2" />

    <LinearLayout
        android:id="@+id/llRealizarLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ja_possui_conta"
            style="@style/TextViewPadrao"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/faca_login"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@android:color/black"
            style="@style/TextViewPadrao"
            android:textStyle="bold" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbCriarConta"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>