<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/branco"
    tools:context=".LoginActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/tvNomeAppLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/nunito_light"
        android:text="@string/nome_app"
        android:textColor="@color/cinza"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/tvDescAppLogin"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvDescAppLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="48dp"
        android:fontFamily="@font/nunito_light"
        android:text="Gerenciamento simples."
        android:textColor="@color/cinza"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/etEmailLogin"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/etEmailLogin"
        style="@style/EditTextFormStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <EditText
        android:id="@+id/etSenhaLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        style="@style/EditTextFormStyle"
        android:gravity="start"
        android:drawablePadding="8dp"
        android:hint="@string/senha"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailLogin" />

    <Button
        android:id="@+id/btnEntrarLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/entrar"
        android:textAllCaps="false"
        android:fontFamily="@font/nunito"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSenhaLogin" />

    <LinearLayout
        android:id="@+id/llCriarConta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextViewPadrao"
            android:text="@string/label_nao_possui_conta"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextViewPadrao"
            android:background="?android:attr/selectableItemBackground"
            android:layout_marginStart="4dp"
            android:text="@string/label_crie_uma"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbEntrar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivIconLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:padding="16dp"
        android:background="@drawable/shape_background_launcher"
        android:src="@drawable/ic_package_white"
        app:layout_constraintBottom_toTopOf="@+id/tvNomeAppLogin"
        app:layout_constraintStart_toStartOf="@+id/tvNomeAppLogin"/>

</android.support.constraint.ConstraintLayout>