<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/branco"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".clientes.ClienteActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tbCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include layout="@layout/layout_toolbar"/>

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tbCliente">

            <EditText
                android:id="@+id/etNomeCliente"
                style="@style/EditTextFormStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_user"
                android:hint="@string/nome"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/etEnderecoCliente"
                style="@style/EditTextFormStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_location"
                android:hint="@string/endereco"
                android:imeOptions="actionNext"
                android:inputType="textPostalAddress"/>

            <EditText
                android:id="@+id/etTelefone1Cliente"
                style="@style/EditTextFormStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_phone"
                android:hint="@string/telefone"
                android:imeOptions="actionNext"
                android:inputType="phone"/>

            <EditText
                android:id="@+id/etTelefone2Cliente"
                style="@style/EditTextFormStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_phone"
                android:hint="@string/telefone_de_emergencia"
                android:imeOptions="actionDone"
                android:inputType="phone"/>

            <ImageButton
                android:id="@+id/btnAddCliente"
                style="@style/ButtonAddStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@null" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/pbAddCliente"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="14dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="8dp"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="1.0" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>